--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
             <h2><b>Branson’s Best Free Guides</b></h2>
             <div class="guides mb-dynamic">
                 <div class="it">
-                    <a href="#"><img src="img/service-1.jpg" alt="In-house ticket service"/></a>
+                    <a href="#"><img src="img/guides-1.jpg" alt="In-house ticket service"/></a>
                     <a href="#" class="h3 name mb-2">The Flavor of Branson</a>
                     <div class="description mb-2">The Flavor of Branson is the only area publication dedicated to
                         showcasing
@@ -310,14 +310,14 @@
                     <a href="#" class="btn btn btn-third">View guide</a>
                 </div>
                 <div class="it">
-                    <a href="#"><img src="img/service-2.jpg" alt="More quiet stay"/></a>
+                    <a href="#"><img src="img/guides-2.jpg" alt="More quiet stay"/></a>
                     <a href="#" class="h3 name mb-2">The Taste of Branson</a>
                     <div class="description mb-2">The Taste of Branson is an in-room menu publication found in over
                         10,000 hotel rooms across the Ozarks, featuring menu highlights and detailed restaurant descriptions to guide guests to the best dining spots in Branson</div>
                     <a href="#" class="btn btn btn-third">View guide</a>
                 </div>
                 <div class="it">
-                    <a href="#"><img src="img/service-3.jpg" alt="Stable management staff"/></a>
+                    <a href="#"><img src="img/guides-3.jpg" alt="Stable management staff"/></a>
                     <a href="#" class="h3 name mb-2">BransonRestaurants.com</a>
                     <div class="description mb-2">Created to give locals and tourists to Branson, MO, the most
                         accurate restaurant information online.</div>
