Small hotels list

--- a/index.html
+++ b/index.html
@@ -306,22 +306,59 @@
                     <div class="description mb-2">The Flavor of Branson is the only area publication dedicated to
                         showcasing
                         the diverse and
-                        fabulous restaurants of Branson.</div>
+                        fabulous restaurants of Branson.
+                    </div>
                     <a href="#" class="btn btn btn-third">View guide</a>
                 </div>
                 <div class="it">
                     <a href="#"><img src="img/guides-2.jpg" alt="More quiet stay"/></a>
                     <a href="#" class="h3 name mb-2">The Taste of Branson</a>
                     <div class="description mb-2">The Taste of Branson is an in-room menu publication found in over
-                        10,000 hotel rooms across the Ozarks, featuring menu highlights and detailed restaurant descriptions to guide guests to the best dining spots in Branson</div>
+                        10,000 hotel rooms across the Ozarks, featuring menu highlights and detailed restaurant
+                        descriptions to guide guests to the best dining spots in Branson
+                    </div>
                     <a href="#" class="btn btn btn-third">View guide</a>
                 </div>
                 <div class="it">
                     <a href="#"><img src="img/guides-3.jpg" alt="Stable management staff"/></a>
                     <a href="#" class="h3 name mb-2">BransonRestaurants.com</a>
                     <div class="description mb-2">Created to give locals and tourists to Branson, MO, the most
-                        accurate restaurant information online.</div>
+                        accurate restaurant information online.
+                    </div>
                     <a href="#" class="btn btn btn-third">View guide</a>
+                </div>
+            </div>
+        </div>
+
+        <img src="img/guys.jpg" class="w-100 mb-dynamic"/>
+
+        <div class="e-club mb-dynamic">
+            <div class="fixed">
+                <h2><b>Save <span class="discount">15% off</span> your next stay by joining our E-Club</b></h2>
+            </div>
+        </div>
+
+        <div class="fixed">
+            <div class="small-hotels mb-dynamic">
+                <div class="it">
+                    <a href="#"><img src="img/hotel-s-1.jpg" alt="In-house ticket service"/></a>
+                    <a href="#" class="h4 name mb-2">Best Western Center Pointe Inn</a>
+                    <a href="#" class="btn btn btn-third">417-335-4731</a>
+                </div>
+                <div class="it">
+                    <a href="#"><img src="img/hotel-s-2.jpg" alt="More quiet stay"/></a>
+                    <a href="#" class="h4 name mb-2">Comfort Inn & Suites Branson Meadows</a>
+                    <a href="#" class="btn btn btn-third">417-335-4731</a>
+                </div>
+                <div class="it">
+                    <a href="#"><img src="img/hotel-s-3.jpg" alt="Stable management staff"/></a>
+                    <a href="#" class="h4 name mb-2">Comfort Inn Thousand Hills</a>
+                    <a href="#" class="btn btn btn-third">417-336-2100</a>
+                </div>
+                <div class="it">
+                    <a href="#"><img src="img/hotel-s-4.jpg" alt="Stable management staff"/></a>
+                    <a href="#" class="h4 name mb-2">Holiday Inn Express Green Mountain Drive</a>
+                    <a href="#" class="btn btn btn-third">417-336-2100</a>
                 </div>
             </div>
         </div>
