--- a/index.html
+++ b/index.html
@@ -364,7 +364,52 @@
         </div>
     </main>
     <footer>
-        sdf
+        <div class="fixed">
+            <div class="row py-4">
+                <div class="col-4">
+                    <a href="#"><img src="img/myer-hospitality-logo.png"/></a>
+                    <div class="my-4">
+                        <a href="#" class="me-2"><img src="img/twitter.png"/></a>
+                        <a href="#"><img src="img/facebook.png"/></a>
+                    </div>
+                    <a href="#" class="btn btn-primary">Contact us</a>
+                </div>
+                <div class="col-8">
+                    <div class="row justify-content-between">
+                        <div class="col-3">
+                            <div><b>Pages</b></div>
+                            <ul>
+                                <li><a href="#">About Myer</a></li>
+                                <li><a href="#">Our hotels</a></li>
+                                <li><a href="#">Travel & Entertainment</a></li>
+                                <li><a href="#">Dining</a></li>
+                                <li><a href="#">Real Estate</a></li>
+                                <li><a href="#">Group Travel & Meeting</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-3">
+                            <div><b>Terms</b></div>
+                            <ul>
+                                <li><a href="#">Privacy Statement</a></li>
+                                <li><a href="#">Terms of use</a></li>
+                                <li><a href="#">Sitemap</a></li>
+                                <li><a href="#">Tell us how we did</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-3">
+                            <div><b>Service</b></div>
+                            <ul>
+                                <li><a href="#">Press room</a></li>
+                                <li><a href="#">Join our e-club</a></li>
+                                <li><a href="#">Careers</a></li>
+                                <li><a href="#">News</a></li>
+                                <li><a href="#">Traveling with family</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
 </div>
 </body>
