--- a/index.html
+++ b/index.html
@@ -366,17 +366,23 @@
     <footer>
         <div class="fixed">
             <div class="row py-4">
-                <div class="col-4">
-                    <a href="#"><img src="img/myer-hospitality-logo.png"/></a>
-                    <div class="my-4">
-                        <a href="#" class="me-2"><img src="img/twitter.png"/></a>
-                        <a href="#"><img src="img/facebook.png"/></a>
+                <div class="col-md-4 col-12 mb-md-0 mb-3">
+                    <div class="row align-items-center">
+                        <div class="col-sm-4 col-md-12 col-12 mb-3 text-sm-start text-center">
+                            <a href="#"><img class="footer-logo" src="img/myer-hospitality-logo.png"/></a>
+                        </div>
+                        <div class="col-sm-4 col-md-12 col-6 my-md-4 mb-3 text-md-start text-sm-center text-start">
+                            <a href="#" class="me-2"><img src="img/twitter.png"/></a>
+                            <a href="#"><img src="img/facebook.png"/></a>
+                        </div>
+                        <div class="col-sm-4 col-md-12 col-6 mb-3 text-md-start text-end">
+                            <a href="#" class="btn btn-primary">Contact us</a>
+                        </div>
                     </div>
-                    <a href="#" class="btn btn-primary">Contact us</a>
                 </div>
-                <div class="col-8">
-                    <div class="row justify-content-between">
-                        <div class="col-3">
+                <div class="col-md-8 col-12">
+                    <div class="row justify-content-sm-between flex-column flex-sm-row">
+                        <div class="col-sm-3 col-12">
                             <div><b>Pages</b></div>
                             <ul>
                                 <li><a href="#">About Myer</a></li>
@@ -387,7 +393,7 @@
                                 <li><a href="#">Group Travel & Meeting</a></li>
                             </ul>
                         </div>
-                        <div class="col-3">
+                        <div class="col-sm-3 col-12">
                             <div><b>Terms</b></div>
                             <ul>
                                 <li><a href="#">Privacy Statement</a></li>
@@ -396,7 +402,7 @@
                                 <li><a href="#">Tell us how we did</a></li>
                             </ul>
                         </div>
-                        <div class="col-3">
+                        <div class="col-sm-3 col-12">
                             <div><b>Service</b></div>
                             <ul>
                                 <li><a href="#">Press room</a></li>
