--- a/fonts/mh/icons-reference.html
+++ b/fonts/mh/icons-reference.html
@@ -31,6 +31,14 @@
           <div class="icon icon-phone"></div>
           <input type="text" readonly="readonly" value="phone">
         </li>
+        <li>
+          <div class="icon icon-menu"></div>
+          <input type="text" readonly="readonly" value="menu">
+        </li>
+        <li>
+          <div class="icon icon-x"></div>
+          <input type="text" readonly="readonly" value="x">
+        </li>
       </ul>
       <h2>Character mapping</h2>
       <ul class="glyphs character-mapping">
@@ -49,6 +57,14 @@
         <li>
           <div data-icon="d" class="icon"></div>
           <input type="text" readonly="readonly" value="d">
+        </li>
+        <li>
+          <div data-icon="e" class="icon"></div>
+          <input type="text" readonly="readonly" value="e">
+        </li>
+        <li>
+          <div data-icon="f" class="icon"></div>
+          <input type="text" readonly="readonly" value="f">
         </li>
       </ul>
     </div>
