--- a/index.html
+++ b/index.html
@@ -29,9 +29,15 @@
                         <li><a href="#">Dining</a></li>
                         <li><a href="#">Real Estate</a></li>
                         <li><a href="#">Group Travel & Meeting</a></li>
+                        <li><a href="#">Book now</a></li>
                     </ul>
                 </div>
-                <div><a class="btn btn-primary" href="#">Book now</a></div>
+                <div><a class="btn btn-primary d-md-inline-block d-none" href="#">Book now</a></div>
+                <div>
+                    <a id="menu-up-control" class="menu-up-control menu-up-control-is-close">
+                        <span class="icon icon-menu"></span><span class="icon icon-x"></span>
+                    </a>
+                </div>
             </div>
         </div>
     </header>
@@ -418,5 +424,11 @@
         </div>
     </footer>
 </div>
+<script
+        src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
