--- a/fonts/mh/icons-reference.html
+++ b/fonts/mh/icons-reference.html
@@ -39,6 +39,18 @@
           <div class="icon icon-x"></div>
           <input type="text" readonly="readonly" value="x">
         </li>
+        <li>
+          <div class="icon icon-bed"></div>
+          <input type="text" readonly="readonly" value="bed">
+        </li>
+        <li>
+          <div class="icon icon-chart"></div>
+          <input type="text" readonly="readonly" value="chart">
+        </li>
+        <li>
+          <div class="icon icon-team-fill"></div>
+          <input type="text" readonly="readonly" value="team-fill">
+        </li>
       </ul>
       <h2>Character mapping</h2>
       <ul class="glyphs character-mapping">
@@ -65,6 +77,18 @@
         <li>
           <div data-icon="f" class="icon"></div>
           <input type="text" readonly="readonly" value="f">
+        </li>
+        <li>
+          <div data-icon="g" class="icon"></div>
+          <input type="text" readonly="readonly" value="g">
+        </li>
+        <li>
+          <div data-icon="h" class="icon"></div>
+          <input type="text" readonly="readonly" value="h">
+        </li>
+        <li>
+          <div data-icon="i" class="icon"></div>
+          <input type="text" readonly="readonly" value="i">
         </li>
       </ul>
     </div>
