--- a/detail.html
+++ b/detail.html
@@ -461,6 +461,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="js/splide.min.js"></script>
 <script src="js/main.js"></script>
-<script src="js/hotel.js"></script>
+<script src="js/sliders.js"></script>
 </body>
 </html>
