--- a/index.html
+++ b/index.html
@@ -19,12 +19,27 @@
         <div class="fixed">
             <div class="header-container">
                 <div>
-                    <a href="#"><img src="img/myer-hospitality-logo.png" alt="MyerHospitality" class="logo"/></a>
+                    <a href="/"><img src="img/myer-hospitality-logo.png" alt="MyerHospitality" class="logo"/></a>
                 </div>
                 <div>
                     <ul class="menu-main">
-                        <li><a href="#">About Myer</a></li>
-                        <li><a href="#">Our hotels</a></li>
+                        <li>
+                            <a href="#">About Myer</a>
+                            <ul>
+                                <li><a href="/about-history.html">Our History</a></li>
+                                <li><a href="/about-press-room.html">Press Room</a></li>
+                                <li><a href="/about-press-room.html">Awards & Accomplishments</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">Our hotels</a>
+                            <ul>
+                                <li><a href="/detail.html">Best Western Center Pointe Inn</a></li>
+                                <li><a href="/detail.html">Comfort Inn & Suites Branson Meadows</a></li>
+                                <li><a href="/detail.html">Comfort Inn at Thousand Hills</a></li>
+                                <li><a href="/detail.html">Holiday Inn Express Green Mtn. Drive</a></li>
+                            </ul>
+                        </li>
                         <li><a href="#">Travel & Entertainment</a></li>
                         <li><a href="#">Dining</a></li>
                         <li><a href="#">Real Estate</a></li>
