--- a/about-history.html
+++ b/about-history.html
@@ -20,7 +20,7 @@
         <div class="fixed">
             <div class="header-container">
                 <div>
-                    <a href="#"><img src="img/myer-hospitality-logo.png" alt="MyerHospitality" class="logo"/></a>
+                    <a href="/"><img src="img/myer-hospitality-logo.png" alt="MyerHospitality" class="logo"/></a>
                 </div>
                 <div>
                     <ul class="menu-main">
