--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <ul>
                                 <li><a href="/about-history.html">Our History</a></li>
                                 <li><a href="/about-press-room.html">Press Room</a></li>
-                                <li><a href="/about-press-room.html">Awards & Accomplishments</a></li>
+                                <li><a href="/about-awards.html">Awards & Accomplishments</a></li>
                             </ul>
                         </li>
                         <li>
