--- a/fonts/mh/icons-reference.html
+++ b/fonts/mh/icons-reference.html
@@ -51,6 +51,14 @@
           <div class="icon icon-team-fill"></div>
           <input type="text" readonly="readonly" value="team-fill">
         </li>
+        <li>
+          <div class="icon icon-search"></div>
+          <input type="text" readonly="readonly" value="search">
+        </li>
+        <li>
+          <div class="icon icon-calendar"></div>
+          <input type="text" readonly="readonly" value="calendar">
+        </li>
       </ul>
       <h2>Character mapping</h2>
       <ul class="glyphs character-mapping">
@@ -89,6 +97,14 @@
         <li>
           <div data-icon="i" class="icon"></div>
           <input type="text" readonly="readonly" value="i">
+        </li>
+        <li>
+          <div data-icon="j" class="icon"></div>
+          <input type="text" readonly="readonly" value="j">
+        </li>
+        <li>
+          <div data-icon="k" class="icon"></div>
+          <input type="text" readonly="readonly" value="k">
         </li>
       </ul>
     </div>
