--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                                 <li><a href="/about-history.html">Our History</a></li>
                                 <li><a href="/about-press-room.html">Press Room</a></li>
                                 <li><a href="/about-awards.html">Awards & Accomplishments</a></li>
+                                <li><a href="/about-our-blog.html">Our Blog</a></li>
                             </ul>
                         </li>
                         <li>
