Our Blog Detail Post

--- a/fonts/mh/icons-reference.html
+++ b/fonts/mh/icons-reference.html
@@ -59,6 +59,10 @@
           <div class="icon icon-calendar"></div>
           <input type="text" readonly="readonly" value="calendar">
         </li>
+        <li>
+          <div class="icon icon-arrow-next"></div>
+          <input type="text" readonly="readonly" value="arrow-next">
+        </li>
       </ul>
       <h2>Character mapping</h2>
       <ul class="glyphs character-mapping">
@@ -105,6 +109,10 @@
         <li>
           <div data-icon="k" class="icon"></div>
           <input type="text" readonly="readonly" value="k">
+        </li>
+        <li>
+          <div data-icon="l" class="icon"></div>
+          <input type="text" readonly="readonly" value="l">
         </li>
       </ul>
     </div>
