Menu mobile fix

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <li><a href="#">Dining</a></li>
                         <li><a href="#">Real Estate</a></li>
                         <li><a href="#">Group Travel & Meeting</a></li>
-                        <li><a href="#">Book now</a></li>
+                        <li class="d-md-none"><a href="#">Book now</a></li>
                     </ul>
                 </div>
                 <div><a class="btn btn-primary d-md-inline-block d-none" href="#">Book now</a></div>
