--- a/index.html
+++ b/index.html
@@ -26,22 +26,27 @@
                         <li>
                             <a href="#">About Myer</a>
                             <ul>
-                                <li><a href="/about-history.html">Our History</a></li>
-                                <li><a href="/about-press-room.html">Press Room</a></li>
-                                <li><a href="/about-awards.html">Awards & Accomplishments</a></li>
-                                <li><a href="/about-our-blog.html">Our Blog</a></li>
+                                <li><a href="about-history.html">Our History</a></li>
+                                <li><a href="about-press-room.html">Press Room</a></li>
+                                <li><a href="about-awards.html">Awards & Accomplishments</a></li>
+                                <li><a href="about-our-blog.html">Our Blog</a></li>
                             </ul>
                         </li>
                         <li>
                             <a href="#">Our hotels</a>
                             <ul>
-                                <li><a href="/detail.html">Best Western Center Pointe Inn</a></li>
-                                <li><a href="/detail.html">Comfort Inn & Suites Branson Meadows</a></li>
-                                <li><a href="/detail.html">Comfort Inn at Thousand Hills</a></li>
-                                <li><a href="/detail.html">Holiday Inn Express Green Mtn. Drive</a></li>
+                                <li><a href="detail.html">Best Western Center Pointe Inn</a></li>
+                                <li><a href="detail.html">Comfort Inn & Suites Branson Meadows</a></li>
+                                <li><a href="detail.html">Comfort Inn at Thousand Hills</a></li>
+                                <li><a href="detail.html">Holiday Inn Express Green Mtn. Drive</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">Travel & Entertainment</a></li>
+                        <li>
+                            <a href="#">Travel & Entertainment</a>
+                            <ul>
+                                <li><a href="branson-entertainment-attractions.html">Branson Entertainment & Attractions</a></li>
+                            </ul>
+                        </li>
                         <li><a href="#">Dining</a></li>
                         <li><a href="#">Real Estate</a></li>
                         <li><a href="#">Group Travel & Meeting</a></li>
