Branson Tickets & Packages

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="fixed">
             <div class="header-container">
                 <div>
-                    <a href="/"><img src="img/myer-hospitality-logo.png" alt="MyerHospitality" class="logo"/></a>
+                    <a href="index.html"><img src="img/myer-hospitality-logo.png" alt="MyerHospitality" class="logo"/></a>
                 </div>
                 <div>
                     <ul class="menu-main">
@@ -45,6 +45,7 @@
                             <a href="#">Travel & Entertainment</a>
                             <ul>
                                 <li><a href="branson-entertainment-attractions.html">Branson Entertainment & Attractions</a></li>
+                                <li><a href="branson-tickets-packages.html">Branson Tickets & Packages</a></li>
                             </ul>
                         </li>
                         <li><a href="#">Dining</a></li>
@@ -370,22 +371,30 @@
                 <div class="it">
                     <a href="#"><img src="img/hotel-s-1.jpg" alt="In-house ticket service"/></a>
                     <a href="#" class="h4 name mb-2">Best Western Center Pointe Inn</a>
+                    <div class="btns">
                     <a href="#" class="btn btn btn-third">417-335-4731</a>
+                    </div>
                 </div>
                 <div class="it">
                     <a href="#"><img src="img/hotel-s-2.jpg" alt="More quiet stay"/></a>
                     <a href="#" class="h4 name mb-2">Comfort Inn & Suites Branson Meadows</a>
+                    <div class="btns">
                     <a href="#" class="btn btn btn-third">417-335-4731</a>
+                    </div>
                 </div>
                 <div class="it">
                     <a href="#"><img src="img/hotel-s-3.jpg" alt="Stable management staff"/></a>
                     <a href="#" class="h4 name mb-2">Comfort Inn Thousand Hills</a>
+                    <div class="btns">
                     <a href="#" class="btn btn btn-third">417-336-2100</a>
+                    </div>
                 </div>
                 <div class="it">
                     <a href="#"><img src="img/hotel-s-4.jpg" alt="Stable management staff"/></a>
                     <a href="#" class="h4 name mb-2">Holiday Inn Express Green Mountain Drive</a>
+                    <div class="btns">
                     <a href="#" class="btn btn btn-third">417-336-2100</a>
+                    </div>
                 </div>
             </div>
         </div>
