--- a/about-history.html
+++ b/about-history.html
@@ -20,7 +20,7 @@
         <div class="fixed">
             <div class="header-container">
                 <div>
-                    <a href="/"><img src="img/myer-hospitality-logo.png" alt="MyerHospitality" class="logo"/></a>
+                    <a href="index.html"><img src="img/myer-hospitality-logo.png" alt="MyerHospitality" class="logo"/></a>
                 </div>
                 <div>
                     <ul class="menu-main">
@@ -30,7 +30,7 @@
                         <li><a href="#">Dining</a></li>
                         <li><a href="#">Real Estate</a></li>
                         <li><a href="#">Group Travel & Meeting</a></li>
-                        <li><a href="#">Book now</a></li>
+                        <li class="d-md-none"><a href="#">Book now</a></li>
                     </ul>
                 </div>
                 <div><a class="btn btn-primary d-md-inline-block d-none" href="#">Book now</a></div>
