--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                             <ul>
                                 <li><a href="branson-entertainment-attractions.html">Branson Entertainment & Attractions</a></li>
                                 <li><a href="branson-tickets-packages.html">Branson Tickets & Packages</a></li>
+                                <li><a href="branson-shopping.html">Branson Shopping</a></li>
                             </ul>
                         </li>
                         <li><a href="#">Dining</a></li>
