--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                 <li><a href="branson-shopping.html">Branson Shopping</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">Dining</a></li>
+                        <li><a href="dining.html">Dining</a></li>
                         <li><a href="#">Real Estate</a></li>
                         <li><a href="#">Group Travel & Meeting</a></li>
                         <li class="d-md-none"><a href="#">Book now</a></li>
