--- a/branson-entertainment-attractions.html
+++ b/branson-entertainment-attractions.html
@@ -152,8 +152,10 @@
             </div>
         </div>
         <div class="join-e-club text-center mb-dynamic py-5">
-            <h2>Branson Hospitality Starts with Myer</h2>
-            <div>Explore Branson at its fullest with Myer Hospitality</div>
+            <div class="fixed">
+                <h2>Branson Hospitality Starts with Myer</h2>
+                <div>Explore Branson at its fullest with Myer Hospitality</div>
+            </div>
         </div>
     </main>
     <footer>
