--- a/detail.html
+++ b/detail.html
@@ -346,9 +346,11 @@
             </div>
         </div>
         <div class="join-e-club text-center mb-dynamic">
-            <h2>Join Our E-Club</h2>
-            <div class="mb-3">Save 15% off of your next stay when you sign up now!</div>
-            <a href="#" class="btn btn-secondary px-5">Sign up</a>
+            <div class="fixed">
+                <h2>Join Our E-Club</h2>
+                <div class="mb-3">Save 15% off of your next stay when you sign up now!</div>
+                <a href="#" class="btn btn-secondary px-5">Sign up</a>
+            </div>
         </div>
         <div class="fixed">
             <div class="reviews">
