--- a/dining.html
+++ b/dining.html
@@ -89,18 +89,17 @@
                     <a href="#" class="btn btn btn-third">View guide</a>
                 </div>
             </div>
-            <div class="mb-dynamic">
-
-            </div>
         </div>
         <div class="join-e-club text-center mb-dynamic">
-            <h2>Partner with Us for Advertising or Distribution</h2>
-            <div class="mb-3">For further details about advertising opportunities or becoming a distribution location,
-                please
-                call us.</div>
-            <div>
-                <a href="tel:417-332-2378" class="btn btn-secondary me-2">417-332-2378</a>
-                <a href="tel:417-334-6835" class="btn btn-secondary">417-334-6835</a>
+            <div class="fixed">
+                <h2>Partner with Us for Advertising or Distribution</h2>
+                <div class="mb-3">For further details about advertising opportunities or becoming a distribution location,
+                    please
+                    call us.</div>
+                <div>
+                    <a href="tel:417-332-2378" class="btn btn-secondary me-2">417-332-2378</a>
+                    <a href="tel:417-334-6835" class="btn btn-secondary">417-334-6835</a>
+                </div>
             </div>
         </div>
         <img src="img/dining-2.jpg" class="w-100 mb-3"/>
