--- a/branson-shopping.html
+++ b/branson-shopping.html
@@ -126,7 +126,7 @@
         </div>
         <div class="join-e-club text-center mb-dynamic py-5">
             <div class="fixed">
-                <h2>Branson Hospitality Starts with Myer</h2>
+                <h2 class="fw-normal">Branson Hospitality Starts with Myer</h2>
                 <div>Explore Branson at its fullest with Myer Hospitality</div>
             </div>
         </div>
