--- a/fonts/mh/icons-reference.html
+++ b/fonts/mh/icons-reference.html
@@ -63,6 +63,10 @@
           <div class="icon icon-arrow-next"></div>
           <input type="text" readonly="readonly" value="arrow-next">
         </li>
+        <li>
+          <div class="icon icon-check"></div>
+          <input type="text" readonly="readonly" value="check">
+        </li>
       </ul>
       <h2>Character mapping</h2>
       <ul class="glyphs character-mapping">
@@ -113,6 +117,10 @@
         <li>
           <div data-icon="l" class="icon"></div>
           <input type="text" readonly="readonly" value="l">
+        </li>
+        <li>
+          <div data-icon="m" class="icon"></div>
+          <input type="text" readonly="readonly" value="m">
         </li>
       </ul>
     </div>
