--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             </ul>
                         </li>
                         <li><a href="dining.html">Dining</a></li>
-                        <li><a href="#">Real Estate</a></li>
+                        <li><a href="real-estate.html">Real Estate</a></li>
                         <li><a href="#">Group Travel & Meeting</a></li>
                         <li class="d-md-none"><a href="#">Book now</a></li>
                     </ul>
