Droup Travel Meetings

--- a/detail.html
+++ b/detail.html
@@ -73,7 +73,7 @@
         </div>
         <div class="reserve-room mb-dynamic">
             <div class="fixed">
-                <div class="h3"><b>Reserve a room</b></div>
+                <div class="h4"><b>Reserve a room</b></div>
             </div>
         </div>
         <div class="hotel-description mb-dynamic">
@@ -130,7 +130,7 @@
         <div class="fixed">
             <div class="gallery mb-dynamic">
                 <h2><b>Gallery</b></h2>
-                <div class="navigation mb-3">
+                <div class="g-navigation mb-3">
                     <a href="#" class="btn btn-primary me-1">View All Gallery</a>
                     <a href="#" class="btn btn-secondary me-1">Exterior (9)</a>
                 </div>
@@ -255,7 +255,7 @@
                                 Patios for prayer groups, devotions, card games and more.
                             </li>
                         </ul>
-                        <div class="h5">
+                        <div class="h6">
                             <span class="icon icon-phone green"></span> <b>877-334-1894</b>
                         </div>
                     </div>
@@ -274,7 +274,7 @@
                         options and choose the perfect one for your ideal vacation.
                     </div>
                 </div>
-                <div class="h3 mb-3"><a href="#"><b>Tickets</b></a></div>
+                <div class="h4 mb-3"><a href="#"><b>Tickets</b></a></div>
                 <div class="general-slide splide js-tickets-splide splide-nav-up-right mb-5">
                     <div class="splide__track">
                         <ul class="splide__list">
@@ -306,7 +306,7 @@
                     </div>
                 </div>
 
-                <div class="h3 mb-3"><a href="#"><b>Packages</b></a></div>
+                <div class="h4 mb-3"><a href="#"><b>Packages</b></a></div>
                 <div class="general-slide splide js-packages-splide splide-nav-up-right mb-dynamic">
                     <div class="splide__track">
                         <ul class="splide__list">
