--- a/fonts/mh/icons-reference.html
+++ b/fonts/mh/icons-reference.html
@@ -67,6 +67,50 @@
           <div class="icon icon-check"></div>
           <input type="text" readonly="readonly" value="check">
         </li>
+        <li>
+          <div class="icon icon-award-trophy"></div>
+          <input type="text" readonly="readonly" value="award-trophy">
+        </li>
+        <li>
+          <div class="icon icon-construction"></div>
+          <input type="text" readonly="readonly" value="construction">
+        </li>
+        <li>
+          <div class="icon icon-countertop"></div>
+          <input type="text" readonly="readonly" value="countertop">
+        </li>
+        <li>
+          <div class="icon icon-door-open-rounded"></div>
+          <input type="text" readonly="readonly" value="door-open-rounded">
+        </li>
+        <li>
+          <div class="icon icon-family-room"></div>
+          <input type="text" readonly="readonly" value="family-room">
+        </li>
+        <li>
+          <div class="icon icon-food-24"></div>
+          <input type="text" readonly="readonly" value="food-24">
+        </li>
+        <li>
+          <div class="icon icon-hair-dryer"></div>
+          <input type="text" readonly="readonly" value="hair-dryer">
+        </li>
+        <li>
+          <div class="icon icon-luggage"></div>
+          <input type="text" readonly="readonly" value="luggage">
+        </li>
+        <li>
+          <div class="icon icon-parking"></div>
+          <input type="text" readonly="readonly" value="parking">
+        </li>
+        <li>
+          <div class="icon icon-refrigerator"></div>
+          <input type="text" readonly="readonly" value="refrigerator">
+        </li>
+        <li>
+          <div class="icon icon-round-room-service"></div>
+          <input type="text" readonly="readonly" value="round-room-service">
+        </li>
       </ul>
       <h2>Character mapping</h2>
       <ul class="glyphs character-mapping">
@@ -121,6 +165,50 @@
         <li>
           <div data-icon="m" class="icon"></div>
           <input type="text" readonly="readonly" value="m">
+        </li>
+        <li>
+          <div data-icon="n" class="icon"></div>
+          <input type="text" readonly="readonly" value="n">
+        </li>
+        <li>
+          <div data-icon="o" class="icon"></div>
+          <input type="text" readonly="readonly" value="o">
+        </li>
+        <li>
+          <div data-icon="p" class="icon"></div>
+          <input type="text" readonly="readonly" value="p">
+        </li>
+        <li>
+          <div data-icon="q" class="icon"></div>
+          <input type="text" readonly="readonly" value="q">
+        </li>
+        <li>
+          <div data-icon="r" class="icon"></div>
+          <input type="text" readonly="readonly" value="r">
+        </li>
+        <li>
+          <div data-icon="s" class="icon"></div>
+          <input type="text" readonly="readonly" value="s">
+        </li>
+        <li>
+          <div data-icon="t" class="icon"></div>
+          <input type="text" readonly="readonly" value="t">
+        </li>
+        <li>
+          <div data-icon="u" class="icon"></div>
+          <input type="text" readonly="readonly" value="u">
+        </li>
+        <li>
+          <div data-icon="v" class="icon"></div>
+          <input type="text" readonly="readonly" value="v">
+        </li>
+        <li>
+          <div data-icon="w" class="icon"></div>
+          <input type="text" readonly="readonly" value="w">
+        </li>
+        <li>
+          <div data-icon="x" class="icon"></div>
+          <input type="text" readonly="readonly" value="x">
         </li>
       </ul>
     </div>
