Droup Travel Meetings

--- a/group-travel-meetings.html
+++ b/group-travel-meetings.html
@@ -471,6 +471,66 @@
                     </div>
                 </div>
             </div>
+            <h2 class="mb-4">Meet our Team</h2>
+            <div class="row mb-dynamic">
+                <div class="col-6">
+                    <h3 class="blue mb-3">Kathy Baltajy, Director of Sales</h3>
+                    <div class="row">
+                        <div class="col-4">
+                            <img src="img/Kathy-Baltajy.jpg" class="w-100 mb-3 border-radius" />
+                            <a href="tel:888-837-2537" class="btn btn-primary w-100">888-837-2537</a>
+                        </div>
+                        <div class="col-8">
+                            <h6 class="mb-2">Experience:</h6>
+                            <p>
+                                <ul>
+                                    <li>22 years Hotel Sales Management</li>
+                                    <li>40 years Sales and Hospitality Trainer</li>
+                                    <li>23 years Women’s Ministry (Licensed Reverend)</li>
+                                </ul>
+                            </p>
+                            <p>
+                                <b>Life Motto</b>: “BE Mindful of HIS presence. Where you are, BE there.”
+                                Hobbies: Working in my yard
+                                Family: (1) daughter and (3) grandchildren & (1) son and (2) grandchildren
+                            </p>
+                            <h6>Markets:</h6>
+                            <ul>
+                                <li>Generate and Maintain all F.I.T. contracts</li>
+                                <li>Tour & Travel Market</li>
+                                <li>Travel Agents</li>
+                                <li>Weddings</li>
+                                <li>Performing Student Markets</li>
+                                <li>Associations / Corporations</li>
+                                <li>Banks</li>
+                                <li>Social Clubs / Senior Centers / Local Businesses</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <h3 class="blue mb-3">Kathy Baltajy, Director of Sales</h3>
+                    <div class="row">
+                        <div class="col-4">
+                            <img src="img/Cheryl-Rials.jpg" class="w-100 mb-3 border-radius" />
+                            <a href="tel:888-723-2468" class="btn btn-primary w-100">888-723-2468</a>
+                        </div>
+                        <div class="col-8">
+                            <h6 class="mb-2">Cheryl manages the following Market segments:</h6>
+                            <p>
+                                <ul>
+                                    <li>Sports – All Men’s & Women’s Athletics – Youth to College</li>
+                                    <li>Faith Based Organizations & Churches</li>
+                                    <li>Reunions – Family, Military, Class & Other</li>
+                                </ul>
+                            </p>
+                            <p>
+                                Cheryl has over 30 years Sales in the Tourism & Hospitality Industry, and has served several years as an officer or committee member for several destination marketing organizations, as well as current member of the Branson Chamber Sports Committee.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
